# k8s-tools

./: Cargo.toml  Justfile
resources/: health-check.yaml  stress.yaml  test-hello.yaml
src/: api.rs  main.rs
src/commands/: missing_health_probes.rs  mod.rs  readonly_root_filesystem.rs  resource_requests.rs
