[package]
name = "k8s-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
k8s-openapi = { version = "0.20", features = ["latest"] }
kube = { version = "0.87", features = ["runtime", "derive"] }
numfmt = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
