[package]
name = "k8s-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1"
clap = { version = "=4.4", features = ["derive", "env"] }
eyre = "0.6"
k8s-openapi = { version = "0.21", features = ["latest"] }
kube = { version = "0.88", features = ["client", "runtime", "derive"] }
log = "0.4"
num = "0.4"
pretty_env_logger = "0.5"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
